opa-gatekeeper/policies/images-registries/k8s-restricted-image-registries.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srestrictedimageregistries
  annotations:
    description: Ensures that images come from approved registries and specifically blocks gcr.io.
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictedImageRegistries
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedRegistries:
              type: array
              items:
                type: string
            deniedRegistries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srestrictedimageregistries

        violation[{"msg": msg}] {
          image := input.review.object.spec.containers[i].image
          not is_allowed_registry(image, input.parameters.allowedRegistries)
          msg := sprintf("Container image '%v' is not from an approved registry.", [image])
        }

        violation[{"msg": msg}] {
          image := input.review.object.spec.containers[i].image
          is_denied_registry(image, input.parameters.deniedRegistries)
          msg := sprintf("Container image '%v' is from a forbidden registry.", [image])
        }

        is_allowed_registry(image, allowed) {
          some i
          startswith(image, allowed[i])
        }

        is_denied_registry(image, denied) {
          some i
          startswith(image, denied[i])
        }
