opa-gatekeeper/policies/images-registries/no-privileged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerNoPrivileged
metadata:
  name: no-privileged-containers
spec:
  enforcementAction: deny
